HelpMePlay | 1.1.0
	New Features:
		- Party Play: Share your quest activity with your party, letting them know when you accept, turn in, and progress on quests! WoW just became less lonely!
	Fixes and Updates:
	